# partner_gateway

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/partners/: __init__.py  router.py
app/tests/: test_root.py
src/: app.py
src/tests/: test_root.py
tests/partners/: test_partners.py
