[tool.poetry]
name = "partner-gateway"
version = "0.1.0"
description = ""
authors = ["Johnathan Barbosa <jbarbosa0504@gmail.com>"]
readme = "README.md"
packages = [{include = "partner_gateway"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"
asgi-lifespan = "^2.0.0"
anyio = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
